--- a/index.css
+++ b/index.css
@@ -45,10 +45,10 @@
 	position: absolute;
 	top: 40%;
 	left: 5%;
-	font-family: 'Archivo Black', sans-serif;
+	font-family: 'Acme', sans-serif;
 	font-weight: bold;
 	font-size: 40px;
-	letter-spacing: 1px;
+	letter-spacing: 2px;
 }
 
 .right-heading{
