--- a/SinglePageSite.css
+++ b/SinglePageSite.css
@@ -74,6 +74,8 @@ button:focus{
 
 .navbar-toggler>.close {
     display:inline;
+    color: #ca2017;
+    opacity: 9;
 }
 .navbar-toggler.collapsed>.close, .navbar-toggler:not(.collapsed)>.navbar-toggler-icon {
     display:none;
