--- a/SinglePageSite.css
+++ b/SinglePageSite.css
@@ -141,7 +141,7 @@ button:focus{
 }
 
 .banner2{
-	background-image: url("banner.jpg");
+	background-image: url("/w3smclsmrv/banner.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center center;
@@ -339,7 +339,7 @@ button:focus{
 }
 
 .abt-banner{
-	background-image: url("abc.jpg");
+	background-image: url("/w3smclsmrv/abc.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center center;
@@ -426,7 +426,7 @@ a:active { text-decoration: none; }
 		margin: 0 1px;
 	}
 	.banner2 {
-		background: url(banner-md.jpg);
+		background: url(/w3smclsmrv/banner-md.jpg);
 		background-repeat: no-repeat;
 	  background-attachment: fixed;
 	  background-position: center center;
