--- a/SinglePageSite.css
+++ b/SinglePageSite.css
@@ -114,7 +114,8 @@ button:focus{
 	position: absolute;
 	top: 40%;
 	left: 5%;
-	font-family: 'Kavoon', cursive;
+	/* font-family: 'Kavoon', cursive; */
+	font-family: 'Space Mono', monospace;
 }
 
 .right-heading{
@@ -230,8 +231,12 @@ button:focus{
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	background-color: rgba(0,0,0,.7);
+}
+.bn3Head {
 	font-size: 60px;
 	text-shadow: 3px 3px 5px #ca2017;
+	text-align: center;
 }
 
 .contact button{
@@ -330,11 +335,11 @@ button:focus{
 }
 
 .bar.learning::before{
-  width: calc(85% - 10px);
+  width: calc(95% - 10px);
 }
 
 .bar.learning1::before{
-  width: calc(60% - 10px);
+  width: calc(45% - 10px);
 }
 
 .bar.learning2::before{
@@ -342,7 +347,7 @@ button:focus{
 }
 
 .bar.learning3::before{
-  width: calc(80% - 10px);
+  width: calc(90% - 10px);
 }
 
 .bar.learning4::before{
@@ -369,6 +374,13 @@ button:focus{
 
 .abt-content a{
 	text-decoration: underline !important;
+}
+
+.skillBadge {
+	background-color: #ffffff;
+	border: 2px solid #E0E0E0;
+	padding: 5px 10px;
+	margin: 5px 0;
 }
 
 
@@ -484,10 +496,6 @@ a:active { text-decoration: none; }
 	.heading span{
 		font-size: 40px;
 	}
-
-
-
-
 }
 
 @media only screen and (min-width: 600px) {
