--- a/SinglePageSite.css
+++ b/SinglePageSite.css
@@ -521,6 +521,10 @@ a:active { text-decoration: none; }
 	.heading span{
 		font-size: 40px;
 	}
+
+	#btnGithub i {
+		margin: 0 !important;
+	}
 }
 
 @media only screen and (min-width: 600px) {
